ARROW-9577: [C++] Ignore EBADF error in posix_madvise()

Also fix the error message given then posix_madvise() fails for another reason
(the error code is given as the function return value, not as errno).